--- a/style.css
+++ b/style.css
@@ -67,3 +67,165 @@
     width: 60px;
     height: 20px;
 }
+
+/* SOLUZIONI */
+.ex-1-square:hover {
+    background-color: red;
+    transition: 1s ease;
+}
+
+.ex-2-square:active {
+    width: 100%;
+    transition: 1s ease-in-out;
+}
+
+.ex-3-square:hover {
+    border-radius: 50%;
+    transition: 1s ease;
+}
+
+.ex-4-square:hover {
+    opacity: 0;
+    transition: 1s ease-out;
+}
+
+.ex-5-square:hover {
+    transform: scale(1.4);
+    transition: 0.25s;
+}
+
+.ex-5-square:active {
+    transform: scale(0.6);
+}
+
+.ex-6-img:hover {
+    filter: grayscale();
+}
+
+.ex-7-img:hover {
+    filter: grayscale() blur(10px);
+    transition: 1s;
+}
+
+.ex-8-img:hover {
+    filter: grayscale() invert();
+    border-radius: 14px;
+    transition: 1s;
+}
+
+.ex-9-img:hover {
+    filter: blur(1.4px) hue-rotate(140deg);
+    border-radius: 14px;
+    transform: scale(1.4);
+    transition: 1s;
+}
+
+.ex-10-icon {
+    animation-name: infinite-spinning;
+    animation-duration: 0.5s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+}
+
+@keyframes infinite-spinning {
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+.ex-11-icon:hover {
+    animation-name: spin;
+    animation-duration: 1s;
+    animation-fill-mode: ease-in;
+}
+
+@keyframes spin {
+    75% {
+        transform: rotate(270deg);
+    }
+     100% {
+         transform: rotate(0deg);
+     }
+}
+
+.ex-12-top-white {
+    animation-name: back-forth-top;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+}
+
+.ex-12-bottom-white {
+    animation-name: back-forth-bottom;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+}
+
+@keyframes back-forth-top {
+    50% {
+        left: calc(90% - 60px);
+    }
+}
+
+@keyframes back-forth-bottom {
+    50% {
+        right: calc(90% - 60px);
+    }
+}
+
+body > div > div:nth-child(14) > div:nth-child(2) > div {
+    overflow-x: hidden;
+}
+
+.ex-13-top-white, .ex-13-bottom-white {
+    animation-duration: 1.5s;
+    animation-iteration-count: infinite;
+    animation-fill-mode: forwards;
+    animation-timing-function: linear;
+}
+
+.ex-13-top-white {
+    animation-name: always-forward-top;
+}
+
+@keyframes always-forward-top {
+
+    50% {
+        left: calc(100% - 0px);
+        top: -10px;
+    }
+
+    80% {
+        left: calc(100% - 0px);
+        top: 54px;
+    }
+
+    100% {
+        left: calc(60% - 20px);
+        top: 54px;
+    }
+
+}
+
+.ex-13-bottom-white {
+    animation-name: always-forward-bottom;
+}
+
+@keyframes always-forward-bottom {
+    50% {
+        right: calc(100% - 0px);
+        bottom: -10px;
+    }
+
+    80% {
+        right: calc(100% - 0px);
+        bottom: 54px;
+    }
+
+    100% {
+        right: calc(60% - 3px);
+        bottom: 54px;
+    }
+
+}
+
+
